--- a/thesis/content/references.bib
+++ b/thesis/content/references.bib
@@ -107,3 +107,16 @@ year = "2004"
 	publisher={Auerbach Publications}
 }
 
+@article{quality,
+	author={Foutse Khomh, Yann-Gael Gueheneuce},
+	title = {Do Design Patterns Impact Software Quality Positively?},
+	date = {2008-04-18},
+	doi={10.1109/CSMR.2008.4493325}
+}
+
+@article{quality2,
+	author={Apostolos Ampatzoglou, Georgia Frantzeskou, Ioannis Stamelos},
+	title = {A methodology to assess the impact of design patterns on software quality},
+	date = {2011-06-08},
+	doi={10.1016/j.infsof.2011.10.006}
+}
