--- a/thesis/preamble.tex
+++ b/thesis/preamble.tex
@@ -131,7 +131,7 @@
 
 %% general metadata:
 \newcommand{\myauthor}{Stephan Valentan}  %% also used for PDF metadata (hyperref)
-\newcommand{\mytitle}{Design patterns in practice: A case study}  %% also used for PDF metadata (hyperref)
+\newcommand{\mytitle}{How the use of design patterns impacts code quality: A controlled experiment}  %% also used for PDF metadata (hyperref)
 \newcommand{\mysubject}{SUBJECT}  %% also used for PDF metadata (hyperref)
 \newcommand{\mykeywords}{KEYWORDS}  %% also used for PDF metadata (hyperref)
 
